k8s/mathverse/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathverse-frontend-service
spec:
  type: ClusterIP
  selector:
    app: mathverse-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
