k8s/mathverse/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathverse-backend-service
spec:
  type: ClusterIP
  selector:
    app: mathverse-backend
  ports:
    - port: 80
      targetPort: 8000
